# mlp

./: .gitmodules  CMakeLists.txt  README.md  RESULTS.md
lib/glew/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/imgui/backends/: imgui_impl_glfw.h
scripts/: assets.sh  build.sh  download-dataset.sh  make.sh
src/: cli.cc  testsuite.cpp  testsuite.hpp  tui.cc
src/containers/: tensor.hpp
src/core/: debug.hpp  time.hpp
src/core/debug/: log.hpp
src/net/: activation.hpp  automl.cpp  automl.hpp  cnn.cpp  cnn.hpp  compute.hpp  dataset.cpp  loss.hpp  mlp.cpp  mlp.cu  mlp.hpp  net.h  optimizer.hpp  trainer.cpp  trainer.hpp  tunning.cpp  tunning.hpp
src/tui/: engine.cpp  tui.hpp  visualizer.hpp  vlWindow.hpp  vlWindowGLFWImpl.cpp
src/util/: stdout.hpp
